# rust-sql

./: .gitignore  Cargo.toml  IMPLEMENTATION_ROADMAP.md  INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  index.html  leptosfmt.toml  package-lock.json  package.json  rustfmt.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml  rust-clippy.yml  rust.yml
app/: globals.css
common/: Cargo.toml
common/src/: drivers.rs  enums.rs  lib.rs  project.rs  utils.rs
common/src/drivers/: postgresql.rs
common/src/projects/: postgresql.rs
common/src/types/: mod.rs  pgsql.rs
js/: pgsql.js
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
src/: App.backup.tsx  App.tsx  app.rs  db_connector.rs  enums.rs  footer.rs  grid_view.rs  header.rs  index.css  invoke.rs  layout.rs  lib.rs  main.rs  main.tsx  performane.rs  queries.rs  query_editor.rs  query_table.rs  record_view.rs  sidebar.rs  sidebar_.rs  tables.rs  tauri.ts  vite-env.d.ts  wasm_functions.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/project_db/: db  snap.00000000000000D3  snap.00000000000001F1
src-tauri/src/: ai.rs  common.rs  constant.rs  enums.rs  lib.rs  main.rs  postgres.rs  project_db.rs  query_db.rs  ssh.rs  terminal.rs  utils.rs
src-tauri/src/common/: enums.rs  pgsql.rs
src-tauri/src/dbs/: mod.rs  project.rs  query.rs  settings.rs  workspace.rs
src-tauri/src/drivers/: bigquery.rs  common.rs  mod.rs  pgsql.rs  postgresql.rs  redshift.rs
src/components/: ai-chat-panel.tsx  ai-settings-dialog.tsx  command-palette.tsx  connection-modal.tsx  csv-import-modal.tsx  editor-tabs.tsx  editor-toolbar.tsx  enums-panel.tsx  erd-diagram.tsx  explain-panel.tsx  extensions-panel.tsx  notify-panel.tsx  object-properties-modal.tsx  performance-monitor.tsx  pg-settings-panel.tsx  postgres-gui.tsx  query-editor.tsx  query-history.tsx  query-results.tsx  resize-handle.tsx  results-grid.tsx  results-map.tsx  results-panel.tsx  results-record.tsx  roles-panel.tsx  schema-diff-panel.tsx  server-sidebar.tsx  sql-editor.tsx  status-bar.tsx  tab-bar.tsx  terminal-panel.tsx  top-bar.tsx
src/components/ui/: button.tsx  context-menu.tsx  dialog.tsx  input.tsx
src/context_menu/: mod.rs  siderbar.rs
src/dashboard/: index.rs  mod.rs  query_editor.rs  query_table.rs
src/databases/: mod.rs
src/databases/bigquery/: driver.rs
src/databases/pgsql/: driver.rs  index.rs  mod.rs  schema.rs  table.rs
src/driver_components/: pgsql.rs
src/drivers/: pgsql.rs
src/header/: index.rs
src/hooks/: mod.rs  use_context_menu.rs
src/lib/: ai-service.ts  alter-table-sql.ts  database-driver.ts  export.ts  schema-context.ts  sql-classify.ts  sql-utils.ts  updater.ts  utils.ts  virtual-cache.ts
src/modals/: add_custom_query.rs  add_pgsql_connection.rs  connection.rs  custom_query.rs  error.rs  mod.rs
src/monaco/: completion-provider.ts  setup.ts
src/pgsql/: add.rs  driver.rs  index.rs  mod.rs
src/sidebar/: index.rs  mod.rs  project.rs  project_item.rs  project_list.rs  queries.rs  query.rs  schema.rs  schema_list.rs  schemas.rs  sidebar.rs  table.rs  tables.rs
src/store/: active_project.rs  atoms.rs  db.rs  editor.rs  mod.rs  projects.rs  queries.rs  query.rs  tabs.rs
src/stores/: history-store.ts  project-store.ts  query-store.ts  settings-store.ts  tab-store.ts  ui-store.ts  workspace-store.ts
src/types/: index.ts
style/: output.css
website/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
website/public/: robots.txt  site.webmanifest  sitemap.xml
website/src/: App.tsx  index.css  main.tsx
website/src/components/: Benchmarks.tsx  CTA.tsx  Comparison.tsx  Demo.tsx  Features.tsx  Hero.tsx
website/src/hooks/: use-sql.ts
website/src/lib/: pglite.ts
