[package]
name = "rust-sql-gui-ui"
version = "1.0.0-alpha.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.5.7", features = ["csr", "nightly"] }
leptos_devtools = { git = "https://github.com/luoxiaozero/leptos-devtools" }
serde = { version = "1.0.192", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = { version ="0.2.88", features = ["serde-serialize"] }
js-sys = "0.3.65"
leptos-use = { version = "0.9.0", features = ["serde", "serde_json"]}
leptos_icons = "0.2.1" # https://carlosted.github.io/icondata/
serde_json = "1.0.108"
wasm-bindgen-futures = "0.4.39"
monaco = "0.4.0"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }
thaw = "0.1.8"
common = { path = "common" }
futures = "0.3.30"
async-stream = "0.3.5"
icondata = "0.3.0"



[workspace]
members = ["src-tauri", "common"]
