[package]
name = "rsql"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_devtools = { git = "https://github.com/luoxiaozero/leptos-devtools" }
serde = { version = "1.0.192", features = ["derive"] }
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"] }
leptos-use = { version = "^0.13.4" }
leptos_icons = "0.3.0" # https://carlosted.github.io/icondata/
monaco = "0.4.0"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = [
    "all",
], branch = "v2" }
thaw = { version = "0.3", features = ["csr"] }
common = { path = "common" }
futures = "0.3.30"
icondata = "0.3.0"
ahash = { version = "0.8.11", features = ["serde"] }
leptos_toaster = { version = "0.1.6", features = ["builtin_toast"] }
chrono = "0.4.38"
proc-macros = { path = "./proc-macros" }


[workspace]
members = ["src-tauri", "common", "proc-macros"]
