[package]
name = "rsql"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rsql_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.47.1"
tokio-postgres = "0.7.13"
chrono = "0.4.42"
sled = "0.34.7"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["fmt"] }
bincode = "1.3.3"
tauri-plugin-shell = "2.3.1"
tauri-plugin-fs = "2.4.2"
