[package]
name = "rsql"
version = "1.1.1"
description = "Modern SQL Client"
authors = ["rust-dd"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rsql_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.5"
tokio = "1.47.1"
tokio-postgres = "0.7.13"
deadpool-postgres = "0.14.1"
postgres-native-tls = "0.5"
native-tls = "0.2"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["fmt"] }
libsql = "0.9.29"
tauri-plugin-shell = "2.3.1"
tauri-plugin-fs = "2.4.2"
thiserror = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
portable-pty = "0.9.0"
rayon = "1.11.0"
sysinfo = "0.38.3"
csv = "1.3"
futures-util = "0.3"
russh = "0.57"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
